src/app/store/header/store-header.component.css
.header {
  height: 100%;
  display: flex;
  flex-flow: row nowrap;
  align-items: stretch;
  background-color: var(--color-bg);
  border-bottom: 1px solid var(--color-content);
}

.header * {
  color: var(--color-content);
}

.header>* {
  display: inline-flex;
  flex-flow: row nowrap;
}

.logo {
  flex: 0 0 auto;
  padding: 0 0.5rem;
  align-items: center;
  cursor: pointer;
}
.logo:hover {
  background-color: rgba(0,0,0,0.2);
}

.logo .mobile {
  display: block;
}

.logo .desktop {
  display: none;
}

.logo>* {
  display: block;
  height: 5rem;
  padding-bottom: 0.5rem;
  margin: 0;
}

@media(min-width: 800px) {
  .logo {
    padding: 0 1.5rem 0 1rem;
    justify-content: space-between;
  }

  .logo .desktop {
    display: block;
  }
  .logo .mobile {
    display: none;
  }
}

.navigation {
  background-color: var(--color-bg-dark);
  flex: 0 0 auto;
  justify-content: space-evenly;
  align-items: stretch;
}

.navigation>* {
  display: inline-flex;
  flex-flow: row nowrap;
  align-items: center;
  border-left: 1px solid var(--color-bg);
  border-right: 1px solid var(--color-bg);
  border-radius: 0;
}

.navigation mat-icon {
  font-size: 2rem;
  width: 2rem;
  height: 2rem;
}

.cart-summary {
  display: inline-flex;
  flex-flow: column nowrap;
  justify-content: center;
  padding: 0 1rem;
}

.action {
  flex: 0 0 auto;
  justify-content: center;
  align-items: center;
  padding: 0;
}
.action mat-icon {
  width: 3rem;
  height: 3rem;
  font-size: 3rem;
}

.action.active {
  /* background-color: rgba(255,255,255,0.3); */
  border-top: 1px solid var(--color-content);
  border-bottom: 1px solid var(--color-content);
}

.middle {
  flex: 1 1 auto;
  font-size: 1.25rem;
  justify-content: center;
  align-items: center;
}

.middle>span {
  display: none;
}

@media(min-width: 640px) {
  .middle>span {
    display: inline;
  }
}

@media(min-width: 800px) {
  .middle>span {
    font-size: 1.75rem;
  }
}

